<resources>
    <string name="app_name">MyLogin</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_show_data_login">ShowDataLogin</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="jurusan">Jurusan</string>
    <string name="semester">Semester</string>
    <string name="loginbutton">LOGIN</string>
    <string name="jurusaninput">Jurusan</string>
    <string name="semesterinput">Semester</string>
</resources>